# CLDL_CUDA

./: CMakeLists.txt  README.md
gtest/: CMakeLists.txt  LayerTest.cu  NetTest.cu  NeuronTest.cu  allTests.cu
include/cldl/: Layer.h  Net.h  Neuron.h  Neuron_old.h
lib/: Layer.cpp  Layer.cu  Net.cpp  Net.cu  Net_old.cpp  Neuron.cu  Neuron_old.cpp
tests/: CMakeLists.txt  main.cpp  main.cu
